# tc001-rs

./: .gitignore  Cargo.toml  README.md  flash.sh  partitions.csv
.cargo/: config.toml
awtrix/: AwtrixFont.h
ds1307/: Cargo.toml  README.md
ds1307/src/: async_api.rs  control.rs  datetime.rs  ds1307.rs  error.rs  lib.rs  nvram.rs  registers.rs  square_wave.rs
ds1307/tests/: async_example.rs
embassy-ha/: .envrc.template  .gitignore  Cargo.toml  Justfile  README.md  README.tpl  generate-readme.sh  mqtt-wire-format.md
embassy-ha/examples/: binary_sensor.rs  button.rs  device_tracker.rs  number.rs  sensor.rs  switch.rs
embassy-ha/examples/common/: mod.rs  std_async_tcp.rs
embassy-ha/src/: binary_state.rs  command_policy.rs  constants.rs  entity.rs  entity_binary_sensor.rs  entity_button.rs  entity_category.rs  entity_device_tracker.rs  entity_number.rs  entity_sensor.rs  entity_switch.rs  lib.rs  log.rs  transport.rs  unit.rs
embassy-ha/src/mqtt/: connect_code.rs  field.rs  mod.rs  packet_id.rs  protocol.rs  qos.rs  rx.rs  transport.rs  tx.rs  varint.rs
esp-hal-smartled/src/: lib.rs
mountain-mqtt/mountain-mqtt-embassy/: Cargo.toml
mountain-mqtt/mountain-mqtt-embassy/src/: mqtt_manager.rs
smart-leds-matrix-old/src/: layout.rs
smart-leds-matrix/src/: async.rs  lib.rs
src/: adc.rs  buttons.rs  buzzer.rs  ds1307.rs  ha.rs  heap.rs  main.rs  mk_static.rs  mqtt.rs  sntpc.rs  state.rs  storage.rs  udp.rs  wifi.rs
src/matrix/: awtrix.rs  color.rs  date.rs  event.rs  font.rs  mod.rs  page.rs  status.rs  time.rs
src/matrix/fonts/: awtrix.rs  mod.rs
src/matrix/pages/: battery.rs  date.rs  mod.rs  time.rs  timer.rs
src/matrix/pages/timer/: mod.rs
src/ntp/: mod.rs  sntpc.rs
src/storage/: keys.rs  mod.rs
