[package]
edition      = "2021"
name         = "tc001"
rust-version = "1.86"
version      = "0.1.0"
license      = "MIT OR Apache-2.0"

[dependencies]
esp-bootloader-esp-idf = { version = "0.3.0", features = ["esp32"] }
esp-hal = { version = "=1.0.0-rc.1", features = [
  "esp32",
  "log-04",
  "unstable",
] }
esp-hal-smartled = "0.16.0"
esp-rtos = { version = "0.1.1", features = ["esp32", "embassy", "log-04", "esp-radio"] }

ekv = { git = "https://github.com/embassy-rs/ekv/", features = ["max-page-count-512"]}

smart-leds = "0.4.0"
smart-leds-matrix = { path = "./smart-leds-matrix" }
embedded-graphics = "0.8.1"
embedded-ttf = "0.2.2"
log = "0.4.27"

embassy-net = { version = "0.7.0", features = [
  "dhcpv4",
  "log",
  "medium-ethernet",
  "tcp",
  "udp",
  "dns"
] }
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
embedded-storage = "0.3.1"
esp-alloc = { version = "0.9.0", features = ["internal-heap-stats"] }
esp-backtrace = { version = "0.18.0", features = [
  "esp32",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.16.0", features = ["esp32", "log-04"] }
esp-storage = { version = "0.8.0", features = ["esp32", "bytewise-read"] }
# for more networking protocol support see https://crates.io/crates/edge-net
# bt-hci = { version = "0.6.0", features = [] }
critical-section = "1.2.0"
embassy-executor = { version = "0.9.1", features = [
  "log",
  "nightly",
] }
embassy-embedded-hal = "0.5.0"
embassy-time = { version = "0.5.0", features = ["log"] }
embassy-sync = "0.7.2"
embassy-futures = "0.1.2"
esp-radio = { version = "0.16.0", features = [
  "esp-alloc",
  "esp32",
  "log-04",
  "smoltcp",
  "wifi",
  "unstable"
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "log",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
  "alloc"
] }
static_cell = "2.1.1"
#trouble-host = { version = "0.4.0", features = ["gatt"] }
heapless = "0.9.1"

dotenvy_macro = "0.15.7"
chrono = { version = "0.4.40", default-features = false, features = ["alloc"] }
chrono-tz = { version = "0.10.3", default-features = false }

serde = { version = "1.0.228", features = ["derive", "alloc"], default-features = false }
postcard = { version = "1.1.3", features = ["alloc"] }

thiserror = { version = "2.0.17", default-features = false }

enum_delegate = "0.2.0"

phf = { version = "0.13.1", default-features = false, features = ["macros"]}

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

[patch.crates-io]
#esp-hal-smartled = { git = "https://github.com/esp-rs/esp-hal-community/", branch = "main" }
esp-hal-smartled = { path = "./esp-hal-smartled" }
esp-hal = { git = "https://github.com/esp-rs/esp-hal", branch = "main" }
esp-rtos = { git = "https://github.com/esp-rs/esp-hal", branch = "main" }
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal/", branch = "main" }
esp-radio = { git = "https://github.com/esp-rs/esp-hal/", branch = "main" }
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal/", branch = "main" }
esp-println = { git = "https://github.com/esp-rs/esp-hal/", branch = "main" }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal/", branch = "main" }
esp-storage = { git = "https://github.com/esp-rs/esp-hal/", branch = "main" }